--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>个人主页</title>
       <!-- 引入 Bootstrap -->
 <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="http://www.llqhz.cn/llqhz/Public/css/bootstrap.min.css" rel="stylesheet">
  
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
- 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- 先jquery，后bootstrap(bootstrap基于jquery) -->
+    <script src="http://www.llqhz.cn/llqhz/Public/script/jquery-3.1.1.js"></script>
+    <script src="http://www.llqhz.cn/llqhz/Public/script/bootstrap.min.js"></script>
+
  
       <!-- HTML5 Shim 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
       <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
@@ -146,7 +145,7 @@
 
                 <div class="carousel-inner">
                     <div class="item active"><!-- item图1 -->
-                        <img src="images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -154,14 +153,14 @@
 
 
                     <div class="item"><!-- item图1 -->
-                        <img src="images/b.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/Public/images/b.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
                     </div>
 
                     <div class="item"><!-- item图1 -->
-                        <img src="images/c.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/Public/images/c.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
