--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="carousel-inner">
                     <div class="item active"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -153,14 +153,14 @@
 
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/Public/images/b.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
                     </div>
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/Public/images/c.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
