--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>个人主页</title>
       <!-- 引入 Bootstrap -->
 <!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="http://www.llqhz.cn/llqhz/Public/css/bootstrap.min.css" rel="stylesheet">
- 
-    <!-- 先jquery，后bootstrap(bootstrap基于jquery) -->
-    <script src="http://www.llqhz.cn/llqhz/Public/script/jquery-3.1.1.js"></script>
-    <script src="http://www.llqhz.cn/llqhz/Public/script/bootstrap.min.js"></script>
+<link href="http://119.29.119.219/llqhz/Public/css/bootstrap.min.css" rel="stylesheet">
 
- 
+    <!-- 先jquery，后bootstrap(bootstrap基于jquery) -->
+    <script src="http://119.29.119.219/llqhz/Public/script/jquery-3.1.1.js"></script>
+    <script src="http://119.29.119.219/llqhz/Public/script/bootstrap.min.js"></script>
+
+
       <!-- HTML5 Shim 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
       <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
       <!--[if lt IE 9]>
@@ -145,7 +145,7 @@
 
                 <div class="carousel-inner">
                     <div class="item active"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -153,14 +153,14 @@
 
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
                     </div>
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -577,7 +577,7 @@
 
 <footer>
     <nav class="navbar-default navbar-fixed-bottom text-center">
-        All images and contents &copy  www.llqhz.cn
+        All images and contents &copy  119.29.119.219
     </nav>
 </footer>
 </body>
