--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" >
     <!-- 响应式布局视图端口设置：宽度等于设备宽度，初始化比例=1 代表100%完全显示-->
     <title>个人主页</title>
-      <!-- 引入 Bootstrap -->
-<!-- 新 Bootstrap 核心 CSS 文件 -->
-<link href="http://www.llqhz.cn/llqhz/Public/css/bootstrap.min.css" rel="stylesheet">
- 
-    <!-- 先jquery，后bootstrap(bootstrap基于jquery) -->
-    <script src="http://www.llqhz.cn/llqhz/Public/script/jquery-3.1.1.js"></script>
-    <script src="http://www.llqhz.cn/llqhz/Public/script/bootstrap.min.js"></script>
+      <!-- 新 Bootstrap 核心 CSS 文件 -->
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
- 
+<!-- 可选的Bootstrap主题文件（一般不使用） -->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"></script>
+
+<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
       <!-- HTML5 Shim 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
       <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
       <!--[if lt IE 9]>
@@ -145,7 +149,7 @@
 
                 <div class="carousel-inner">
                     <div class="item active"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -153,14 +157,14 @@
 
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
                     </div>
 
                     <div class="item"><!-- item图1 -->
-                        <img src="http://www.llqhz.cn/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
+                        <img src="http://119.29.119.219/llqhz/Public/images/a.jpg" alt="图片失效" class="img-responsive img-rounded">
                         <div class="carousel-caption">
                             图片描述信息
                         </div>
@@ -577,7 +581,7 @@
 
 <footer>
     <nav class="navbar-default navbar-fixed-bottom text-center">
-        All images and contents &copy  www.llqhz.cn
+        All images and contents &copy  119.29.119.219
     </nav>
 </footer>
 </body>
