--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <div class="panel-body">
                 <!-- img-responsive响应式图片
                 img-rounded图片圆角 img-thumbnail图片加相册-->
-                <img src="images/logo.jpg" class="img-responsive img-rounded img-thumbnail" alt="☆筱 怪☆" title="☆筱 怪☆"/>
+                <img src="http://119.29.119.219/llqhz/Public/upload/userinfo/20170424/58fd8f060c3db.jpg" class="img-responsive img-rounded img-thumbnail" alt="☆筱 怪☆" title="☆筱 怪☆"/>
                 <p class="text-center text-primary">☆筱 怪☆</p>
                 <address>
                     <span class="glyphicon glyphicon-link">
